--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ Scripts
 * build configuration script for OpenVMS
 
 Adaptation Libraries
+* unify CARDINAL and LONGINT versions of Hash
 * implement ISO version of module BasicFileIO
 * implement module BasicFileSys for Aglet Modula-2
 * implement module BasicFileSys for Clarion Modula-2
